Anthony/Stephen fixing spacing on dashboard tables

--- a/src/sass/modules/tables.scss
+++ b/src/sass/modules/tables.scss
@@ -48,7 +48,7 @@
             padding-right: 20px;
 
             .button-inverted {
-                margin: 0 0px 30px 0;
+                margin: 0 0 30px 0;
             }
 
             button {
@@ -340,7 +340,7 @@
 
 
             .button-inverted {
-                margin: 0 0px 30px 0;
+                margin: 0 0 30px 0;
             }
 
             button { 
